# kiwmi

./: Cargo.toml  README.md  ideas.txt  meson.build  watch.sh
browser-gui/: package.json
browser-gui/patches/: react-beautiful-dnd+13.1.1.patch
browser-gui/public/: index.html  manifest.json
browser-gui/src/: App.module.scss  App.tsx  index.css  index.scss  index.tsx  model.ts  utils.ts
contrib/: ws_test.lua
contrib/kiwmi/: config.lua  controller.lua  init.lua  manager.lua  util.lua  websocket_server.lua
include/: color.h  luak.h  server.h  text_buffer.h  websocket.h
include/desktop/: desktop.h  desktop_surface.h  layer_shell.h  lock.h  output.h  popup.h  stratum.h  view.h  xdg_shell.h
include/input/: cursor.h  input.h  keyboard.h  pointer.h  seat.h
include/kiwmi/: commands.h  frontend.h  input.h  output.h  server.h
include/luak/: ipc.h  kiwmi_cursor.h  kiwmi_keyboard.h  kiwmi_lua_callback.h  kiwmi_output.h  kiwmi_renderer.h  kiwmi_scene_node.h  kiwmi_server.h  (+4 more)
kiwmi/: color.c  commands.c  frontend.c  input.c  luak.c  main.c  meson.build  output.c  server.c  text_buffer.c  websocket.c
kiwmi/desktop/: .output.c.kak.pRsrnt  desktop.c  desktop_surface.c  layer_shell.c  lock.c  output.c  popup.c  stratum.c  view.c  xdg_shell.c
kiwmi/input/: cursor.c  input.c  keyboard.c  pointer.c  seat.c
kiwmi/luak/: ipc.c  kiwmi_cursor.c  kiwmi_keyboard.c  kiwmi_lua_callback.c  kiwmi_output.c  kiwmi_renderer.c  kiwmi_scene_node.c  kiwmi_scene_tree.c  kiwmi_server.c  kiwmi_view.c  lua_compat.c  luak.c
kiwmic/: main.c
lua/: kiwmi.lua
protocols/: kiwmi-ipc.xml
(+11 files in other folders)
