kiwmi_sources = files(
  'main.c',
  'server.c',
  'color.c',
  'text_buffer.c',
  'websocket.c',
  'desktop/desktop.c',
  'desktop/desktop_surface.c',
  'desktop/layer_shell.c',
  'desktop/output.c',
  'desktop/popup.c',
  'desktop/stratum.c',
  'desktop/view.c',
  'desktop/xdg_shell.c',
  'desktop/lock.c',
  'input/cursor.c',
  'input/input.c',
  'input/keyboard.c',
  'input/pointer.c',
  'input/seat.c',
  'luak/ipc.c',
  'luak/kiwmi_cursor.c',
  'luak/kiwmi_keyboard.c',
  'luak/kiwmi_lua_callback.c',
  'luak/kiwmi_output.c',
  'luak/kiwmi_server.c',
  'luak/kiwmi_view.c',
  'luak/kiwmi_scene_tree.c',
  'luak/kiwmi_scene_node.c',
  'luak/luak.c',
)

kiwmi_deps = [
  lua,
  pixman,
  protocols_server,
  wayland_server,
  wlroots,
  xkbcommon,
  libinput,
  cairo,
  pango,
  pangocairo,
  libwebsockets,
]

executable(
  'kiwmi',
  kiwmi_sources,
  include_directories: [include],
  dependencies: kiwmi_deps,
  install: true,
)
